# First_project

./: 10.py  10_task.py  4_1.py  4_10.py  4_3.py  4_6.py  4_7.py  4_8.py  4_9.py  calc.py  calc_new.py  calc_upd.py  dell.py  fibonachi.py  main.py  main1.py  main2.py  main4.py  main5.py  test.py  test2.py  test_game.py  test_video.py
04_hw/: 4.3_upd.py  4_11.py  4_12.py  4_13.py  4_14.py  4_2.py  4_4_dictionary.py  4_5.py  4_7.py
05_hw/: 5_1.py  5_10.py  5_11.py  5_12.py  5_13.py  5_14.py  5_2.py  5_2_new.py  5_3.py  5_4.py  5_5.py  5_5.test.py  5_6.py  5_7.py  5_7_upd.py  5_8_new.py  5_8test.py  5_9.py
06_hw/: 6_1.PY  6_10.py  6_11.py  6_12.py  6_13.py  6_14.py  6_2.py  6_3.py  6_4.py  6_5.py  6_6.py  6_7.py  6_8.py  6_8_new.py  6_9.py  base_1.txt  dell.py
06_hw/6_Mentor_check/: file_parser.py  main.py
06_hw/6_Mentor_check/garbage/: Skan................20230925................................_2_.avi  signal-2023-06-01-142501_003.main
06_hw/6_Mentor_check_git/: clean.py  normalize.py
06_hw/6_Mentor_check_git/garbage/MY_OTHER/: Скан_20230925.rar
06_hw/6_Mentor_check_git/garbage/documents/DOCX/: Bat_Upr_vjedomjest_schodo_v.s._pot.vjedm.zdorovu_VLK_djeagnoz_VZ.docx
07_hw/7_Mentor_check/clean_folder/: setup.py
07_hw/7_Mentor_check/clean_folder/clean_folder.egg-info/: PKG-INFO
07_hw/my_packages_parent/: README.md  setup.cfg
07_hw/my_packages_parent/src/my_package133123.egg-info/: PKG-INFO  SOURCES.txt
outher/: calc_new.py  dictionary_value_change.py
txt_folder/: output.txt  source.txt
