[metadata]
name = my_package133123
version = 0.0.1
author = Alex_UFA
author_email = alexx133123@gmail.com
description = my first test/example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UaMilitary/First_project/tree/main/06_hw/6_Mentor_check
